# funnel

./: .env_example  Dockerfile  alembic.ini  docker-compose.yaml  pyproject.toml
docker/: run_migrations.sh  wait_for_it.sh
migrations/: env.py
migrations/versions/: 8558fa1f344a_init3.py  c505e757f75a_init2.py  d690eec38e96_init.py
src/: configuration.py
src/bot/: __main__.py  dispatcher.py
src/bot/filters/: admin.py  end.py  register.py
src/bot/filters/utils/: is_admin.py
src/bot/handlers/: __init__.py  admin.py  end_message.py  funks.py  funnel.py  start.py
src/bot/middlewares/: middleware_db.py  user.py
src/bot/structures/: data_structure.py  role.py
src/bot/structures/keyboards/: inline_keyboards.py  main_menu.py  reply_keyboards.py
src/bot/structures/lexicon/: lexicon_ru.py
src/bot/structures/states/: waiting_continue.py
src/db/: database.py
src/db/models/: base.py  user.py
src/db/repositories/: abstract.py  user.py
